--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<h1>Rom-booking</h1>
 
 			<div id="form">
-				<form class="pure-form pure-form-aligned" name="input" method="post">
+				<form class="pure-form pure-form-aligned" id="searchForm" name="searchForm" method="post">
 					<fieldset>
 						<div class="pure-control-group">
 							<label for="epost">Epost:</label>
@@ -67,5 +67,7 @@
 	</script>
 	<script src="js/datetimeconfig.js">
 	</script>
+	<script src="js/misc.js">
+	</script
 </html>
 <!-- Gruppe 27 -->
