--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
 						<div class="pure-control-group">
 							<label for="some_class_1">Fra:</label>
-							<input type="text" class="some_class" name="fromDate" value="" id="some_class_1" size="25" required>
+							<input type="text" class="some_class" name="fromDate" value="" id="fromDate" size="25" required>
 							<label for="some_class_2">Til:</label>
-							<input type="text" class="some_class" name="toDate" value="" id="some_class_2" size="25" required>
+							<input type="text" class="some_class" name="toDate" value="" id="toDate" size="25" required>
 						</div>
 
 						<div class="pure-control-group">
