--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<h1>Rom-booking</h1>
 
 			<div id="form">
-				<form class="pure-form pure-form-aligned" id="searchForm" name="searchForm" action="search.php" method="post">
+				<form class="pure-form pure-form-aligned" id="searchForm" name="searchForm" action="php/search.php" method="post">
 					<fieldset>
 						<div class="pure-control-group">
 							<label for="email">Epost:</label>
